# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/emacs-cvs/Attic/ChangeLog,v 1.106 2007/04/17 10:07:04 opfer Exp $

  17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.98.ebuild, emacs-cvs-22.0.9999-r10.ebuild,
  emacs-cvs-23.0.0-r6.ebuild:
  keyworded ~amd64, bug 174891

  17 Apr 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.0.98.ebuild,
  emacs-cvs-22.0.9999-r10.ebuild:
  Removed dodoc MAINTAINERS since the file is not in the snapshot.

  17 Apr 2007; Ulrich Mueller <ulm@gentoo.org> -emacs-cvs-22.0.96.ebuild,
  -emacs-cvs-22.0.9999-r6.ebuild:
  Old versions removed.

*emacs-cvs-22.0.98 (17 Apr 2007)

  17 Apr 2007; Ulrich Mueller <ulm@gentoo.org> +emacs-cvs-22.0.98.ebuild:
  Taken from Emacs overlay: Prepare for new eselect module; new sound and
  hesiod USE flags; dropped gnome USE flag; removed font dependencies for X;
  suffix of emacs executable changed from .emacs- to -emacs- for better
  compatibility with XEmacs; SLOT changed to 22. Request AUTOCONF 2.61 instead
  of latest, fixes bug #170969. Remove colliding files between slots, fixes
  bug #169033.

  16 Apr 2007; Ulrich Mueller <ulm@gentoo.org> -files/emacs-22.0.50.desktop,
  -files/emacs-23.0.0.desktop, -files/50emacs-23.0.0.envd,
  -files/emacs-cvs-blessmail-build.patch,
  -files/emacs-cvs-darwin-fsf-gcc.patch:
  Clean up.

*emacs-cvs-23.0.0-r6 (16 Apr 2007)
*emacs-cvs-22.0.9999-r10 (16 Apr 2007)

  16 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/emacs-cvs-disable_alsa_detection.patch,
  +emacs-cvs-22.0.9999-r10.ebuild, +emacs-cvs-23.0.0-r6.ebuild:
  prepared for new eselect module, no more automagic dependencies, cleanups
  and straighter ebuild. Taken from Emacs Overlay

  11 Apr 2007; <tester@gentoo.org> emacs-cvs-23.0.0-r1.ebuild:
  Commenting out non-working patch
