@@ -27,14 +27,14 @@ EBUILD emacs-cvs-22.0.97.ebuild 6643 RMD160 27e101617290ac9885a229e83ddc0e13092c
 MD5 992f42942a9163e96939d9832756f0ea emacs-cvs-22.0.97.ebuild 6643
 RMD160 27e101617290ac9885a229e83ddc0e13092cd3cb emacs-cvs-22.0.97.ebuild 6643
 SHA256 5606e1ab0e975cc7162c93a65247718266617e1ca52a50c3e8c930d919ed95e7 emacs-cvs-22.0.97.ebuild 6643
-EBUILD emacs-cvs-22.0.98.ebuild 7518 RMD160 b255b09e767b0ca8586ead5ca5d8294a8c77ce6b SHA1 5b0427b44dfdc676c24e105d508efd0d6838a780 SHA256 c17817287c2ec61e5afa1b472a7be94e845557b30966bda40eea2a2eb91d0efc
-MD5 9128ac44d2db04b54836534945099cf6 emacs-cvs-22.0.98.ebuild 7518
-RMD160 b255b09e767b0ca8586ead5ca5d8294a8c77ce6b emacs-cvs-22.0.98.ebuild 7518
-SHA256 c17817287c2ec61e5afa1b472a7be94e845557b30966bda40eea2a2eb91d0efc emacs-cvs-22.0.98.ebuild 7518
-EBUILD emacs-cvs-22.0.9999-r10.ebuild 7679 RMD160 cdcc47c810ce84a8d95eccdab219ceb46f42ab70 SHA1 f17ea24e3cbbea678bfaeb73e64c70e4d63a232c SHA256 f5319c82ef0ee78b26f180f9db14b38b3012d236b72b73c00e22985dc07d8df9
-MD5 bab821a38132e0799c95ce5bca531ec2 emacs-cvs-22.0.9999-r10.ebuild 7679
-RMD160 cdcc47c810ce84a8d95eccdab219ceb46f42ab70 emacs-cvs-22.0.9999-r10.ebuild 7679
-SHA256 f5319c82ef0ee78b26f180f9db14b38b3012d236b72b73c00e22985dc07d8df9 emacs-cvs-22.0.9999-r10.ebuild 7679
+EBUILD emacs-cvs-22.0.98.ebuild 7528 RMD160 a24d7f2382fa7fc12177867289bad2188b47f042 SHA1 da703d5d6dfd2fe4104a30f88d0633ebf9de8e52 SHA256 f5e01859a9f2118e4d14dcc0bb32fd13a28f49c36a10892f6e9e07c53a3d0331
+MD5 576972b0b7e88745823568f6060a689d emacs-cvs-22.0.98.ebuild 7528
+RMD160 a24d7f2382fa7fc12177867289bad2188b47f042 emacs-cvs-22.0.98.ebuild 7528
+SHA256 f5e01859a9f2118e4d14dcc0bb32fd13a28f49c36a10892f6e9e07c53a3d0331 emacs-cvs-22.0.98.ebuild 7528
+EBUILD emacs-cvs-22.0.9999-r10.ebuild 7689 RMD160 544701b906ba5007c0b7d2c9d2d6e1a411149410 SHA1 eac0a318c12256a34927ac58807eb159eb50967b SHA256 108ba67b45990c0afb1754e5890572a1954ed60d31616a735a57c1a9377f7e32
+MD5 2003e557282bb8c87e07d2835e9e9175 emacs-cvs-22.0.9999-r10.ebuild 7689
+RMD160 544701b906ba5007c0b7d2c9d2d6e1a411149410 emacs-cvs-22.0.9999-r10.ebuild 7689
+SHA256 108ba67b45990c0afb1754e5890572a1954ed60d31616a735a57c1a9377f7e32 emacs-cvs-22.0.9999-r10.ebuild 7689
 EBUILD emacs-cvs-22.0.9999-r7.ebuild 6703 RMD160 c2b8e50a2bbaec24da57c657828a300ca7f89a02 SHA1 6a424818c1f6916e9537c714395c85fc1822d8ae SHA256 16c3c5158661e34dfe1272c69866870746ed485ae6380e3fce15eb89e15852cc
 MD5 23bc6272300e02899268cfcc339e27b8 emacs-cvs-22.0.9999-r7.ebuild 6703
 RMD160 c2b8e50a2bbaec24da57c657828a300ca7f89a02 emacs-cvs-22.0.9999-r7.ebuild 6703
@@ -43,14 +43,14 @@ EBUILD emacs-cvs-23.0.0-r1.ebuild 5772 RMD160 1db592d913958bf735dc481392a8521ffa
 MD5 eb38b95a554cbae3617e204bbb52ea1d emacs-cvs-23.0.0-r1.ebuild 5772
 RMD160 1db592d913958bf735dc481392a8521ffa4a98de emacs-cvs-23.0.0-r1.ebuild 5772
 SHA256 932b97d355c334bf4f5f27c16b6dc5b1dc041ddaf92a9aa8e8effe7aa4be40f3 emacs-cvs-23.0.0-r1.ebuild 5772
-EBUILD emacs-cvs-23.0.0-r6.ebuild 7928 RMD160 a50e1d939b12d332ecb4b92d82162427e7b7ee06 SHA1 12f4c362ce360e3e52fba8d5ccbca44183bc2810 SHA256 a66b698e1ac517a10e6887947239bd1c0749d4546580d8d00bd22b488b8c3daf
-MD5 85f56591bb8f66d5239e4e0b09416d22 emacs-cvs-23.0.0-r6.ebuild 7928
-RMD160 a50e1d939b12d332ecb4b92d82162427e7b7ee06 emacs-cvs-23.0.0-r6.ebuild 7928
-SHA256 a66b698e1ac517a10e6887947239bd1c0749d4546580d8d00bd22b488b8c3daf emacs-cvs-23.0.0-r6.ebuild 7928
-MISC ChangeLog 20827 RMD160 cd24604f32a6660465355d3445eef752a0f702aa SHA1 f37b1c91302d5c0edca048e5ca02aa59f2a9e537 SHA256 2657d24400803d632a535e02d2c513419edd7bb17bb4c87aad9456a4b2a6913b
-MD5 59b0c6ae237ce77365ef7981723f655f ChangeLog 20827
-RMD160 cd24604f32a6660465355d3445eef752a0f702aa ChangeLog 20827
-SHA256 2657d24400803d632a535e02d2c513419edd7bb17bb4c87aad9456a4b2a6913b ChangeLog 20827
+EBUILD emacs-cvs-23.0.0-r6.ebuild 7938 RMD160 9727fa53ef9a327e6f6c64ba527f201d531d3856 SHA1 6b640f2800468d71b60797e1cb64745d77f7b2fb SHA256 40774f06a6ab2c02bdff3012da8eaf9d72a9e891bfc6e485882616104470074a
+MD5 a28feae8a095a67e3b90ae105851a14a emacs-cvs-23.0.0-r6.ebuild 7938
+RMD160 9727fa53ef9a327e6f6c64ba527f201d531d3856 emacs-cvs-23.0.0-r6.ebuild 7938
+SHA256 40774f06a6ab2c02bdff3012da8eaf9d72a9e891bfc6e485882616104470074a emacs-cvs-23.0.0-r6.ebuild 7938
+MISC ChangeLog 21006 RMD160 bfcbd7f23d452dce21af3065bba25c122494f5b6 SHA1 633657598ccd6b63368cdfc4ff865f50fefbc5ca SHA256 e74b69cb38ce76132a48c47adc2f6ad302b40bba22c1e4af6ddfee58071cc0dd
+MD5 300e97d1a8ae3a6001a21cbc6e6fa273 ChangeLog 21006
+RMD160 bfcbd7f23d452dce21af3065bba25c122494f5b6 ChangeLog 21006
+SHA256 e74b69cb38ce76132a48c47adc2f6ad302b40bba22c1e4af6ddfee58071cc0dd ChangeLog 21006
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -74,9 +74,9 @@ MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-emacs-cvs-23.0.0-r6 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-emacs-cvs-23.0.0-r6 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-emacs-cvs-23.0.0-r6 0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v1.4.6-ecc01.6 (GNU/Linux)
 
-iD8DBQFGJJxUNQqtfCuFneMRAhAtAJ0UlZV5arR+4o/UFxfwS3gyITwHdQCcCoZF
-zM4JZ7CNDA76ghIhKFEu/XQ=
-=ixQG
+iD8DBQFGJjsrKRy60XGEcJIRAtTsAJkBQyIuS9CPZpGRy4yMlat7rAuXaACeMkGN
+Omoa7W4JSZ07BUhYppvMgAU=
+=a7Di
 -----END PGP SIGNATURE-----
