@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/emacs-cvs/Attic/emacs-cvs-22.0.98.ebuild,v 1.3 2007/04/17 10:07:04 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/emacs-cvs/Attic/emacs-cvs-22.0.98.ebuild,v 1.4 2007/04/18 15:37:04 gustavoz Exp $
 
 WANT_AUTOCONF="2.61"
 WANT_AUTOMAKE="latest"
@@ -45,7 +45,7 @@ SLOT="22"
 # determine some path information correctly for copy/move operations later on
 FULL_VERSION="${PV}"
 LICENSE="GPL-2 FDL-1.2"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~sparc ~x86"
 S="${WORKDIR}/emacs-${PV}"
 
 src_unpack() {
