@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/emacs-cvs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/emacs-cvs/Attic/ChangeLog,v 1.106 2007/04/17 10:07:04 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/emacs-cvs/Attic/ChangeLog,v 1.107 2007/04/18 15:37:04 gustavoz Exp $
+
+  18 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  emacs-cvs-22.0.98.ebuild, emacs-cvs-22.0.9999-r10.ebuild,
+  emacs-cvs-23.0.0-r6.ebuild:
+  Keyworded ~sparc wrt #174891
 
   17 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   emacs-cvs-22.0.98.ebuild, emacs-cvs-22.0.9999-r10.ebuild,
